[tool.poetry]
name = "single"
version = "0.1.0"
description = "A single package manager for everything."
authors = ["ALinuxPerson <alinuxperson@gmail.com>"]
license = "GPL-3.0+"

[tool.poetry.dependencies]
python = "^3.6"
mypy = "^0.782"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
mypy = "^0.782"
pytest = "^6.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
