[tool.poetry]
name = "single"
version = "0.1.0"
description = "A single package manager for everything."
authors = ["ALinuxPerson <alinuxperson@gmail.com>"]
license = "GPL-3.0+"

[tool.poetry.dependencies]
python = "^3.6"
mypy = "^0.782"
typer = "^0.3.2"
toml = "^0.10.1"
rich = "^7.1.0"
loguru = "^0.5.3"
rpyc = "^4.1.5"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
mypy = "^0.782"
pytest = "^6.0.1"

[tool.poetry.scripts]
single = "single.cli:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
